clusters/k3s-home/apps/media/jellyfin/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-nodeport
  namespace: media
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
      nodePort: 30096  # You'll access via any-node-ip:30096
      protocol: TCP
